--- a/Clone_DisneyPlus/project/assets/css/style.css
+++ b/Clone_DisneyPlus/project/assets/css/style.css
@@ -1,17 +1,5 @@
 @import url('./base/_reset.css');
 @import url('./base/_fonts.css');
 @import url('./base/_global.css');
+@import url('./components/__logo.css');
 
-body{
-     background-color: rebeccapurple;
-}
-
-/*     <h1>Disney Plus</h1>
-     <p>Acesse</p>
-     <i class="fa-solid fa-house"></i>
-     <i class="fa-solid fa-magnifying-glass"></i>
-     <i class="fa-solid fa-plus"></i>
-     <i class="fa-solid fa-start"></i>
-     <i class="fa-solid fa-film"></i>
-     <i class="fa-solid fa-tv"></i>
-     <i class="fa-solid fa-ellipsis-vertical"></i>//*/
