--- a/Clone_DisneyPlus/project/assets/css/base/_global.css
+++ b/Clone_DisneyPlus/project/assets/css/base/_global.css
@@ -1,15 +1,13 @@
 body{
      font-family: 'Roboto', sans-serif;
+     color: white;    
 }
 
 html{
-     font-size: 62.5%;     
-     
-     font-size: 2rem;
+     font-size: 62.5%;    
 }
 
-.background-fixed{
- 
+.background-fixed{ 
      background: url('../../imgs/background.png') no-repeat;
      background-size: cover;
      position: fixed;
