--- a/Clone_DisneyPlus/project/assets/css/components/__logo.css
+++ b/Clone_DisneyPlus/project/assets/css/components/__logo.css
@@ -4,7 +4,7 @@
 }
 
 .logo__link{
-     background: url('../../imgs/avatar.png') no-repeat;
+     background: url('../../imgs/logo.svg') no-repeat;
      background-position: center;
      background-size: 105%;
      display: inline-block;
@@ -12,7 +12,7 @@
      width: 7.5rem;
 }
 
-@media screen and(max-width: 1024px) {
+@media screen and (max-width: 1024px) {
      .logo {
           margin-left: 2.2rem;
           padding-top: 2.0rem;
