--- a/Clone_DisneyPlus/project/assets/css/style.css
+++ b/Clone_DisneyPlus/project/assets/css/style.css
@@ -4,5 +4,8 @@
 @import url('./base/_animations.css');
 @import url('./layout/_header.css');
 @import url('./layout/_nav-menu.css');
+@import url('./layout/_user-menu.css');
+@import url('./components/_user-profile.css');
 @import url('./components/_logo.css');
+
 
