--- a/Clone_DisneyPlus/project/assets/css/layout/_user-menu.css
+++ b/Clone_DisneyPlus/project/assets/css/layout/_user-menu.css
@@ -60,7 +60,23 @@
      display: none;
 }
 
-.user-menu:hover  .show-hover{    
+.user-menu:hover  .show-hover, 
+.user-menu:hover  .user-profile_title{   
      display: block;
 }
 
+@media screen and (max-width: 1024px) {
+     .user-menu .user-profile_title{
+          display: none;
+     }
+  
+     .user-menu .user-profile__avatar{
+          height: 3.6rem;
+          width: 3.6rem;
+     }
+
+     .user-menu__current-profile{
+          padding-top: 1.9rem;
+     }
+     
+}
