--- a/Clone_DisneyPlus/project/assets/css/layout/_header.css
+++ b/Clone_DisneyPlus/project/assets/css/layout/_header.css
@@ -1,11 +1,12 @@
 .header {
-     display: flex;
      
+     display: flex;
+     position: fixed;
+     transition: background-color .3s;
+     width: 100%;
 }
 
 .header__navigation{
-     display: flex;
-     justify-content: space-between;
      width: 100%;
     
 }
