--- a/Clone_DisneyPlus/project/assets/css/layout/_nav-menu.css
+++ b/Clone_DisneyPlus/project/assets/css/layout/_nav-menu.css
@@ -36,7 +36,7 @@
      background: #fff;
      bottom: -.8rem;
      content: '';
-     height: 2px;
+     height: 2rem;
      position: absolute;
      transition: width .2s;
      width: 0;
@@ -61,11 +61,14 @@
      border: .1rem solid #393939 ;
      border-radius: .5rem;
      display: none;
+     margin: -2rem;
      padding: 0.4rem 0;
-     position: relative;
-     top: -2rem;
+     position: absolute;
 }
 
+.nav-submenu.active{
+     display: block;
+}
 .nav-submenu__text{
      margin-left: 1.2rem;
      position: relative;
