--- a/Clone_DisneyPlus/project/assets/css/layout/_nav-menu.css
+++ b/Clone_DisneyPlus/project/assets/css/layout/_nav-menu.css
@@ -13,8 +13,7 @@
      color: #ffff;
      display: inline-block;
      font-size: 1.3rem;
-     letter-spacing: 0.1rem;
-     
+     letter-spacing: 0.1rem;     
      text-transform: uppercase;
 }
 
@@ -36,22 +35,21 @@
      background: #fff;
      bottom: -.8rem;
      content: '';
-     height: 2rem;
+     height: .2rem;
      position: absolute;
      transition: width .2s;
      width: 0;
 }
 
-.nav-submenu__link:hover  .nav-submenu__text::before,
-.nav-menu__link:hover  .nav-menu__text::before{
-     width: 100%;
+.nav-submenu__link:hover .nav-submenu__text::before,
+.nav-menu__link:hover .nav-menu__text::before {
+    width: 100%;
 }
-
 .nav-menu__item.dropdown{
      display: none;
 }
 
-.nav-menu__item.dropdown:hover .nav-submenu{
+.nav-menu__item.dropdown:hover  .nav-submenu{
      display: block;
 }
 
@@ -77,7 +75,7 @@
 @media screen and (max-width: 1024px) {
      .nav-menu{
           margin-left: 2.5rem;
-          padding-bottom: 1.6rem;
+          padding-bottom: 1rem;
      }
      .nav-menu__item.mobile-hidden,
      .nav-menu__text{
