--- a/Clone_DisneyPlus/project/assets/css/pages/home/banners.css
+++ b/Clone_DisneyPlus/project/assets/css/pages/home/banners.css
@@ -12,8 +12,17 @@
 
 .banner-slider__item{
      flex-shrink: 0;
-     margin:0 1rem  3rem;
+     padding:0 1rem  3rem;
+     position: relative;
      width: 90vw;
+}
+
+.banner-slider__counter{
+     font-size: 2rem;
+     left: 4rem;
+     position: absolute;
+     top: 4rem;
+     z-index: 10;
 }
 
 .banner-slider__link::before{
@@ -47,6 +56,13 @@
      position: absolute;
      top:0;
      width: 100%;
+}
+
+.banners .arrow-slider {
+     margin-top: -3rem;
+     position: absolute;
+     z-index: 2;
+
 }
 
 .banners .arrow-slider--left {
