--- a/Clone_DisneyPlus/project/assets/css/pages/home/banners.css
+++ b/Clone_DisneyPlus/project/assets/css/pages/home/banners.css
@@ -17,14 +17,6 @@
      width: 90vw;
 }
 
-.banner-slider__counter{
-     font-size: 2rem;
-     left: 4rem;
-     position: absolute;
-     top: 4rem;
-     z-index: 10;
-}
-
 .banner-slider__link::before{
      border: .4rem solid rgba(255, 255, 255, 0);
      border-radius: .5rem;
@@ -81,3 +73,30 @@
      bottom: 4.6rem;
      right: 11.6rem;
 }
+
+@media screen and ( max-width: 1024px) {
+
+     .banners{
+          padding-top: 8.2rem;
+     }
+
+     .banner-slider__item{
+          width: 85vw;
+     }
+
+
+     .banners  .arrow-slider--left {
+          left: 1rem;
+     }
+
+     .banners .arrow-slider--right {
+          right: 1rem;
+     }
+
+     .banners .controls-slider {
+          bottom: 4.2rem;
+           right: 50%;
+           transform: translateX(50%);
+     }
+}
+     
