--- a/Clone_DisneyPlus/project/assets/css/style.css
+++ b/Clone_DisneyPlus/project/assets/css/style.css
@@ -9,6 +9,7 @@
 @import url('./components/_user-profile.css');
 @import url('./components/_arrow-slider.css');
 @import url('./components/_controls-slider.css');
-@import url('./pages/home/banners.css');
+@import url('./pages/home/_banners.css');
+@import url('./pages/home/_categories.css');
 
 
