--- a/Clone_DisneyPlus/project/assets/css/style.css
+++ b/Clone_DisneyPlus/project/assets/css/style.css
@@ -11,5 +11,6 @@
 @import url('./components/_controls-slider.css');
 @import url('./pages/home/_banners.css');
 @import url('./pages/home/_categories.css');
+@import url('./components/_collection.css');
 
 
