--- a/Clone_DisneyPlus/project/assets/css/pages/home/_banners.css
+++ b/Clone_DisneyPlus/project/assets/css/pages/home/_banners.css
@@ -45,11 +45,8 @@
      width: 100%;
 }
 
-.banner-slider__title {
-     left: 0;
-     position: absolute;
-     top:0;
-     width: 100%;
+.banner-slider__title.active {
+    display: block;
 }
 
 .banners .arrow-slider {
@@ -61,14 +58,12 @@
 
 .banners .arrow-slider--left {
      left: 3.6rem;
-     position: absolute;
-     z-index: 2;
+    
 }
 
 .banners .arrow-slider--right {
      right: 3.6rem;
-     position: absolute;
-     z-index: 2;
+  
 }
 
 .banners .controls-slider {
