--- a/Clone_DisneyPlus/project/assets/css/components/_collection.css
+++ b/Clone_DisneyPlus/project/assets/css/components/_collection.css
@@ -23,8 +23,13 @@
 }
 
 .movie-carousel__item{
+     opacity: .5;
      padding: 0 1rem 2.5rem;
      width: calc(91vw / 5);
+}
+
+.movie-carousel__item.active {
+     opacity: 1;
 }
 
 .movie-carousel__link {
@@ -59,22 +64,32 @@
 }
 
 .movie-carousel  .arrow-slider {
+     height: 100%;
      margin-top: -2.5rem;
-        position: absolute;
-        z-index: 2;
+     opacity: 0;
+     position: absolute;
+     transition: opacity .3s;
+     z-index: 2;
+}
 
+.movie-carousel .arrow-slider:hover {
+     opacity: 1;
 }
 
 .movie-carousel .arrow-slider--left {
-     left: 3.6rem;
-    
+     padding: 0  3.6rem;
+     left: 0;    
 }
 
-.movie-carousel .arrow-slider--right {
-     right: 3.6rem;
-  
+.movie-carousel  .arrow-slider--right {
+     padding: 0  3.6rem;
+     right: 0rem;  
 }
 
+.banners .controls-slider {
+     bottom: 4.6rem;
+     right: 11.6rem;
+}
 @media screen and (max-width: 1024px) {
      .collection {
           padding-top: 0;
@@ -88,12 +103,14 @@
      }   
      
      .movie-carousel .arrow-slider--left {
-          left: 1rem;
+          padding: 0  1rem;
+          left: 0rem;
          
      }
      
      .movie-carousel .arrow-slider--right {
-          right: 1rem;
+          padding: 0  1rem;
+          right: 0rem;  
        
      }
 }
