--- a/Clone_DisneyPlus/project/assets/css/pages/home/_banners.css
+++ b/Clone_DisneyPlus/project/assets/css/pages/home/_banners.css
@@ -13,9 +13,14 @@
 
 .banner-slider__item{
      flex-shrink: 0;
+     opacity: 0.5;
      padding:0 1rem  3rem;
      position: relative;
      width: 91vw;
+}
+
+.banner-slider__item.active {
+     opacity: 1;
 }
 
 .banner-slider__link{
@@ -50,20 +55,27 @@
 }
 
 .banners .arrow-slider {
+     height: 100%;
      margin-top: -3rem;
+     opacity: 0;
      position: absolute;
+     transition: opacity .3s;
      z-index: 2;
 
 }
 
+.banner-slider .arrow-slider:hover {
+     opacity: 1;
+}
+
 .banners .arrow-slider--left {
-     left: 3.6rem;
-    
+     padding: 0  3.6rem;
+     left: 0;    
 }
 
 .banners .arrow-slider--right {
-     right: 3.6rem;
-  
+     padding: 0  3.6rem;
+     right: 0rem;  
 }
 
 .banners .controls-slider {
@@ -83,11 +95,13 @@
 
 
      .banners  .arrow-slider--left {
-          left: 1rem;
+          padding: 0 1rem;
+          left: 0;
      }
 
      .banners .arrow-slider--right {
-          right: 1rem;
+          padding: 0 1rem;
+          right: 0;
      }
 
      .banners .controls-slider {
