--- a/Clone_DisneyPlus/project/assets/css/components/_collection.css
+++ b/Clone_DisneyPlus/project/assets/css/components/_collection.css
@@ -86,10 +86,7 @@
      right: 0rem;  
 }
 
-.banners .controls-slider {
-     bottom: 4.6rem;
-     right: 11.6rem;
-}
+
 @media screen and (max-width: 1024px) {
      .collection {
           padding-top: 0;
@@ -104,13 +101,13 @@
      
      .movie-carousel .arrow-slider--left {
           padding: 0  1rem;
-          left: 0rem;
+          left: 0;
          
      }
      
      .movie-carousel .arrow-slider--right {
           padding: 0  1rem;
-          right: 0rem;  
+          right: 0;  
        
      }
 }
